--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@azure/msal-node": "^1.17.2",
     "@azure/msal-react": "^1.5.7",
     "@fluentui/react": "8.29.0",
+    "@fluentui/react-hooks": "^8.6.27",
     "@fluentui/react-icons-mdl2": "^1.3.45",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "dynamics-web-api": "^1.7.9",
-    "eslint-plugin-react-hooks": "^5.0.0-canary-0210f0b08-20230525",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "moment": "^2.29.4",
     "react": "16.8.6",
     "react-beautiful-dnd": "^13.1.1",
@@ -35,8 +38,8 @@
     "@types/react": "^16.8",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.23.4",
