--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
-    "crypto-js": "^4.1.1",
+    "crypto": "npm:crypto-browserify",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "dynamics-web-api": "^1.7.9",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -29,7 +31,12 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^16.8.6",
     "react-redux": "^8.0.7",
-    "uuid": "^9.0.0"
+    "stream": "npm:stream-browserify",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "util": "^0.12.5",
+    "uuid": "^9.0.0",
+    "web3": "^4.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
@@ -49,8 +56,5 @@
     "pcf-scripts": "^1",
     "pcf-start": "^1",
     "typescript": "^4.3"
-  },
-  "browser": {
-    "crypto": false
   }
 }
