--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "@azure/msal-browser": "^2.37.0",
-    "@azure/msal-node": "^1.17.2",
-    "@azure/msal-react": "^1.5.7",
+    "@azure/msal-react": "^1.5.8",
     "@fluentui/react": "8.29.0",
     "@fluentui/react-hooks": "^8.6.27",
     "@fluentui/react-icons-mdl2": "^1.3.45",
@@ -21,11 +20,13 @@
     "axios": "^1.4.0",
     "crypto": "npm:crypto-browserify",
     "crypto-browserify": "^3.12.0",
-    "https-browserify": "^1.0.0",
     "dynamics-web-api": "^1.7.9",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
     "moment": "^2.29.4",
     "react": "16.8.6",
     "react-beautiful-dnd": "^13.1.1",
