--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "refreshTypes": "pcf-scripts refreshTypes"
   },
   "dependencies": {
-    "@azure/msal-browser": "^2.37.0",
+    "@azure/msal-browser": "^2.37.1",
+    "@azure/msal-node": "^1.17.3",
     "@azure/msal-react": "^1.5.8",
     "@fluentui/react": "8.29.0",
     "@fluentui/react-hooks": "^8.6.27",
@@ -29,6 +30,7 @@
     "https-browserify": "^1.0.0",
     "moment": "^2.29.4",
     "react": "16.8.6",
+    "react-app-rewired": "^2.2.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^16.8.6",
     "react-redux": "^8.0.7",
@@ -37,7 +39,8 @@
     "stream-http": "^3.2.0",
     "util": "^0.12.5",
     "uuid": "^9.0.0",
-    "web3": "^4.0.1"
+    "web3": "^4.0.1",
+    "webpack": "^5.86.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
