--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react": "^16.8",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/uuid": "^9.0.2",
+    "@types/xrm": "^9.0.73",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
