Remove unused code/packages

--- a/package.json
+++ b/package.json
@@ -5,42 +5,24 @@
   "scripts": {
     "build": "pcf-scripts build",
     "clean": "pcf-scripts clean",
+    "lint": "eslint --ext .js,.ts . --fix",
     "rebuild": "pcf-scripts rebuild",
     "start": "pcf-scripts start",
     "refreshTypes": "pcf-scripts refreshTypes"
   },
   "dependencies": {
-    "@azure/msal-browser": "^2.37.1",
-    "@azure/msal-node": "^1.17.3",
-    "@azure/msal-react": "^1.5.8",
     "@fluentui/react": "8.29.0",
     "@fluentui/react-hooks": "^8.6.27",
     "@fluentui/react-icons-mdl2": "^1.3.45",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
-    "axios": "^1.4.0",
-    "crypto": "npm:crypto-browserify",
-    "crypto-browserify": "^3.12.0",
-    "dynamics-web-api": "^1.7.9",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "http": "^0.0.1-security",
-    "https": "^1.0.0",
-    "https-browserify": "^1.0.0",
     "moment": "^2.29.4",
-    "react": "16.8.6",
+    "react": "^16.9.0",
     "react-app-rewired": "^2.2.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^16.8.6",
     "react-redux": "^8.0.7",
-    "stream": "npm:stream-browserify",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "util": "^0.12.5",
-    "uuid": "^9.0.0",
-    "web3": "^4.0.1",
-    "webpack": "^5.86.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
@@ -53,11 +35,14 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "pcf-scripts": "^1",
     "pcf-start": "^1",
     "typescript": "^4.3"
